; ModuleID = '/home/carl/AnghaBench/openvpn/tests/unit_tests/openvpn/extr_test_packet_id.c_test_packet_id_write_setup.c'
source_filename = "/home/carl/AnghaBench/openvpn/tests/unit_tests/openvpn/extr_test_packet_id.c_test_packet_id_write_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.test_packet_id_write_data = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**)* @test_packet_id_write_setup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_packet_id_write_setup(i8** %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8**, align 8
  %4 = alloca %struct.test_packet_id_write_data*, align 8
  store i8** %0, i8*** %3, align 8
  %5 = call %struct.test_packet_id_write_data* @calloc(i32 1, i32 24)
  store %struct.test_packet_id_write_data* %5, %struct.test_packet_id_write_data** %4, align 8
  %6 = load %struct.test_packet_id_write_data*, %struct.test_packet_id_write_data** %4, align 8
  %7 = icmp ne %struct.test_packet_id_write_data* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %22

9:                                                ; preds = %1
  %10 = load %struct.test_packet_id_write_data*, %struct.test_packet_id_write_data** %4, align 8
  %11 = getelementptr inbounds %struct.test_packet_id_write_data, %struct.test_packet_id_write_data* %10, i32 0, i32 1
  %12 = bitcast i32* %11 to i8*
  %13 = load %struct.test_packet_id_write_data*, %struct.test_packet_id_write_data** %4, align 8
  %14 = getelementptr inbounds %struct.test_packet_id_write_data, %struct.test_packet_id_write_data* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 1
  store i8* %12, i8** %15, align 8
  %16 = load %struct.test_packet_id_write_data*, %struct.test_packet_id_write_data** %4, align 8
  %17 = getelementptr inbounds %struct.test_packet_id_write_data, %struct.test_packet_id_write_data* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  store i32 4, i32* %18, align 8
  %19 = load %struct.test_packet_id_write_data*, %struct.test_packet_id_write_data** %4, align 8
  %20 = bitcast %struct.test_packet_id_write_data* %19 to i8*
  %21 = load i8**, i8*** %3, align 8
  store i8* %20, i8** %21, align 8
  store i32 0, i32* %2, align 4
  br label %22

22:                                               ; preds = %9, %8
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local %struct.test_packet_id_write_data* @calloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
